Fix text overflow in sidebar

--- a/src/components/item/item.css
+++ b/src/components/item/item.css
@@ -13,4 +13,10 @@
   &:hover {
     background-color: var(--hover-color);
   }
+
+  & span {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
