--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,5 +1,5 @@
 #sidebar {
-  flex: 0 1 350px;
+  max-width: 350px;
   background-color: var(--secondary-background);
   padding: 16px;
 
